<resources>
    <string name="app_name">To Do List</string>
    <string name="done">Done</string>
    <string name="complete">Complete</string>
    <string name="title">Title</string>
    <string name="date">DDMMYYYY</string>
    <string name="pending">Pending</string>
    <string name="add">Add</string>
    <string name="what">What is to be done?</string>
    <string name="when">When is it due?</string>
    <string name="details">Details</string>
    <string name="imp">Important</string>
</resources>